examples/test/testpolicy17289.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy17289
  namespace: namespace466
spec:
  podSelector:
    matchLabels:
      key23: value13
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key13: value19
          key39: value44
          key48: value9
      podSelector:
        matchLabels:
          key10: value38
          key22: value10
          key32: value29
